--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.3",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "js": "^0.1.0",
